TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieLibInit_t LibInit;

extern LibTiePieLibIsInitialized_t LibIsInitialized;

extern LibTiePieLibExit_t LibExit;

extern LibTiePieLibGetVersion_t LibGetVersion;

extern LibTiePieLibGetVersionExtra_t LibGetVersionExtra;

extern LibTiePieLibGetConfig_t LibGetConfig;

extern LibTiePieLibGetLastStatus_t LibGetLastStatus;

extern LibTiePieLibGetLastStatusStr_t LibGetLastStatusStr;

extern LibTiePieLstUpdate_t LstUpdate;

extern LibTiePieLstGetCount_t LstGetCount;

extern LibTiePieLstOpenDevice_t LstOpenDevice;

extern LibTiePieLstOpenOscilloscope_t LstOpenOscilloscope;

extern LibTiePieLstOpenGenerator_t LstOpenGenerator;

extern LibTiePieLstOpenI2CHost_t LstOpenI2CHost;

extern LibTiePieLstCreateCombinedDevice_t LstCreateCombinedDevice;

extern LibTiePieLstCreateAndOpenCombinedDevice_t LstCreateAndOpenCombinedDevice;

extern LibTiePieLstRemoveDevice_t LstRemoveDevice;

extern LibTiePieLstRemoveDeviceForce_t LstRemoveDeviceForce;

extern LibTiePieLstDevCanOpen_t LstDevCanOpen;

extern LibTiePieLstDevGetProductId_t LstDevGetProductId;

extern LibTiePieLstDevGetVendorId_t LstDevGetVendorId;

extern LibTiePieLstDevGetName_t LstDevGetName;

extern LibTiePieLstDevGetNameShort_t LstDevGetNameShort;

extern LibTiePieLstDevGetNameShortest_t LstDevGetNameShortest;

extern LibTiePieLstDevGetDriverVersion_t LstDevGetDriverVersion;

extern LibTiePieLstDevGetRecommendedDriverVersion_t LstDevGetRecommendedDriverVersion;

extern LibTiePieLstDevGetFirmwareVersion_t LstDevGetFirmwareVersion;

extern LibTiePieLstDevGetRecommendedFirmwareVersion_t LstDevGetRecommendedFirmwareVersion;

extern LibTiePieLstDevGetCalibrationDate_t LstDevGetCalibrationDate;

extern LibTiePieLstDevGetSerialNumber_t LstDevGetSerialNumber;

extern LibTiePieLstDevGetIPv4Address_t LstDevGetIPv4Address;

extern LibTiePieLstDevGetIPPort_t LstDevGetIPPort;

extern LibTiePieLstDevHasServer_t LstDevHasServer;

extern LibTiePieLstDevGetServer_t LstDevGetServer;

extern LibTiePieLstDevGetTypes_t LstDevGetTypes;

extern LibTiePieLstDevGetContainedSerialNumbers_t LstDevGetContainedSerialNumbers;

extern LibTiePieLstCbDevGetProductId_t LstCbDevGetProductId;

extern LibTiePieLstCbDevGetVendorId_t LstCbDevGetVendorId;

extern LibTiePieLstCbDevGetName_t LstCbDevGetName;

extern LibTiePieLstCbDevGetNameShort_t LstCbDevGetNameShort;

extern LibTiePieLstCbDevGetNameShortest_t LstCbDevGetNameShortest;

extern LibTiePieLstCbDevGetDriverVersion_t LstCbDevGetDriverVersion;

extern LibTiePieLstCbDevGetFirmwareVersion_t LstCbDevGetFirmwareVersion;

extern LibTiePieLstCbDevGetCalibrationDate_t LstCbDevGetCalibrationDate;

extern LibTiePieLstCbScpGetChannelCount_t LstCbScpGetChannelCount;

extern LibTiePieLstSetCallbackDeviceAdded_t LstSetCallbackDeviceAdded;

extern LibTiePieLstSetCallbackDeviceRemoved_t LstSetCallbackDeviceRemoved;

extern LibTiePieLstSetCallbackDeviceCanOpenChanged_t LstSetCallbackDeviceCanOpenChanged;
extern LibTiePieLstSetEventDeviceAdded_t LstSetEventDeviceAdded;

extern LibTiePieLstSetEventDeviceRemoved_t LstSetEventDeviceRemoved;

extern LibTiePieLstSetEventDeviceCanOpenChanged_t LstSetEventDeviceCanOpenChanged;
extern LibTiePieLstSetEventDeviceAdded_t LstSetEventDeviceAdded;

extern LibTiePieLstSetEventDeviceRemoved_t LstSetEventDeviceRemoved;

extern LibTiePieLstSetEventDeviceCanOpenChanged_t LstSetEventDeviceCanOpenChanged;

extern LibTiePieLstSetMessageDeviceAdded_t LstSetMessageDeviceAdded;

extern LibTiePieLstSetMessageDeviceRemoved_t LstSetMessageDeviceRemoved;

extern LibTiePieLstSetMessageDeviceCanOpenChanged_t LstSetMessageDeviceCanOpenChanged;
extern LibTiePieNetGetAutoDetectEnabled_t NetGetAutoDetectEnabled;

extern LibTiePieNetSetAutoDetectEnabled_t NetSetAutoDetectEnabled;

extern LibTiePieNetSrvAdd_t NetSrvAdd;

extern LibTiePieNetSrvRemove_t NetSrvRemove;

extern LibTiePieNetSrvGetCount_t NetSrvGetCount;

extern LibTiePieNetSrvGetByIndex_t NetSrvGetByIndex;

extern LibTiePieNetSrvGetByURL_t NetSrvGetByURL;

extern LibTiePieNetSrvSetCallbackAdded_t NetSrvSetCallbackAdded;
extern LibTiePieNetSrvSetEventAdded_t NetSrvSetEventAdded;
extern LibTiePieNetSrvSetEventAdded_t NetSrvSetEventAdded;

extern LibTiePieNetSrvSetMessageAdded_t NetSrvSetMessageAdded;
extern LibTiePieObjClose_t ObjClose;

extern LibTiePieObjIsRemoved_t ObjIsRemoved;

extern LibTiePieObjGetInterfaces_t ObjGetInterfaces;

extern LibTiePieObjSetEventCallback_t ObjSetEventCallback;

extern LibTiePieObjGetEvent_t ObjGetEvent;
extern LibTiePieObjSetEventEvent_t ObjSetEventEvent;
extern LibTiePieObjSetEventEvent_t ObjSetEventEvent;

extern LibTiePieObjSetEventWindowHandle_t ObjSetEventWindowHandle;
extern LibTiePieDevClose_t DevClose;

extern LibTiePieDevIsRemoved_t DevIsRemoved;

extern LibTiePieDevGetDriverVersion_t DevGetDriverVersion;

extern LibTiePieDevGetFirmwareVersion_t DevGetFirmwareVersion;

extern LibTiePieDevGetCalibrationDate_t DevGetCalibrationDate;

extern LibTiePieDevGetCalibrationToken_t DevGetCalibrationToken;

extern LibTiePieDevGetSerialNumber_t DevGetSerialNumber;

extern LibTiePieDevGetIPv4Address_t DevGetIPv4Address;

extern LibTiePieDevGetIPPort_t DevGetIPPort;

extern LibTiePieDevGetProductId_t DevGetProductId;

extern LibTiePieDevGetVendorId_t DevGetVendorId;

extern LibTiePieDevGetType_t DevGetType;

extern LibTiePieDevGetName_t DevGetName;

extern LibTiePieDevGetNameShort_t DevGetNameShort;

extern LibTiePieDevGetNameShortest_t DevGetNameShortest;

extern LibTiePieDevHasBattery_t DevHasBattery;

extern LibTiePieDevGetBatteryCharge_t DevGetBatteryCharge;

extern LibTiePieDevGetBatteryTimeToEmpty_t DevGetBatteryTimeToEmpty;

extern LibTiePieDevGetBatteryTimeToFull_t DevGetBatteryTimeToFull;

extern LibTiePieDevIsBatteryChargerConnected_t DevIsBatteryChargerConnected;

extern LibTiePieDevIsBatteryCharging_t DevIsBatteryCharging;

extern LibTiePieDevIsBatteryBroken_t DevIsBatteryBroken;

extern LibTiePieDevSetCallbackRemoved_t DevSetCallbackRemoved;
extern LibTiePieDevSetEventRemoved_t DevSetEventRemoved;
extern LibTiePieDevSetEventRemoved_t DevSetEventRemoved;

extern LibTiePieDevSetMessageRemoved_t DevSetMessageRemoved;
extern LibTiePieDevTrGetInputCount_t DevTrGetInputCount;

extern LibTiePieDevTrGetInputIndexById_t DevTrGetInputIndexById;

extern LibTiePieScpTrInIsTriggered_t ScpTrInIsTriggered;

extern LibTiePieDevTrInGetEnabled_t DevTrInGetEnabled;

extern LibTiePieDevTrInSetEnabled_t DevTrInSetEnabled;

extern LibTiePieDevTrInGetKinds_t DevTrInGetKinds;

extern LibTiePieScpTrInGetKindsEx_t ScpTrInGetKindsEx;

extern LibTiePieDevTrInGetKind_t DevTrInGetKind;

extern LibTiePieDevTrInSetKind_t DevTrInSetKind;

extern LibTiePieDevTrInIsAvailable_t DevTrInIsAvailable;

extern LibTiePieScpTrInIsAvailableEx_t ScpTrInIsAvailableEx;

extern LibTiePieDevTrInGetId_t DevTrInGetId;

extern LibTiePieDevTrInGetName_t DevTrInGetName;

extern LibTiePieDevTrGetOutputCount_t DevTrGetOutputCount;

extern LibTiePieDevTrGetOutputIndexById_t DevTrGetOutputIndexById;

extern LibTiePieDevTrOutGetEnabled_t DevTrOutGetEnabled;

extern LibTiePieDevTrOutSetEnabled_t DevTrOutSetEnabled;

extern LibTiePieDevTrOutGetEvents_t DevTrOutGetEvents;

extern LibTiePieDevTrOutGetEvent_t DevTrOutGetEvent;

extern LibTiePieDevTrOutSetEvent_t DevTrOutSetEvent;

extern LibTiePieDevTrOutGetId_t DevTrOutGetId;

extern LibTiePieDevTrOutGetName_t DevTrOutGetName;

extern LibTiePieDevTrOutTrigger_t DevTrOutTrigger;

extern LibTiePieScpGetChannelCount_t ScpGetChannelCount;

extern LibTiePieScpChIsAvailable_t ScpChIsAvailable;

extern LibTiePieScpChIsAvailableEx_t ScpChIsAvailableEx;

extern LibTiePieScpChGetConnectorType_t ScpChGetConnectorType;

extern LibTiePieScpChIsDifferential_t ScpChIsDifferential;