TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas


procedure LibInit; cdecl;
function LibIsInitialized : ByteBool; cdecl;
procedure LibExit; cdecl;
function LibGetVersion : TTpVersion; cdecl;
function LibGetVersionExtra : PAnsiChar; cdecl;
function LibGetConfig( pBuffer : PByte ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LibGetLastStatus : TLibTiePieStatus; cdecl;
function LibGetLastStatusStr : PAnsiChar; cdecl;
procedure LstUpdate; cdecl;
function LstGetCount : LongWord; cdecl;
function LstOpenDevice( dwIdKind , dwId , dwDeviceType : LongWord ) : TLibTiePieHandle; cdecl;
function LstOpenOscilloscope( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl;
function LstOpenGenerator( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl;
function LstOpenI2CHost( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl;
function LstCreateCombinedDevice( pDeviceHandles : PLibTiePieHandle ; dwCount : LongWord ) : LongWord; cdecl;
function LstCreateAndOpenCombinedDevice( pDeviceHandles : PLibTiePieHandle ; dwCount : LongWord ) : TLibTiePieHandle; cdecl;
procedure LstRemoveDevice( dwSerialNumber : LongWord ); cdecl;
procedure LstRemoveDeviceForce( dwSerialNumber : LongWord ); cdecl;
function LstDevCanOpen( dwIdKind , dwId , dwDeviceType : LongWord ) : ByteBool; cdecl;
function LstDevGetProductId( dwIdKind , dwId : LongWord ) : LongWord; cdecl;
function LstDevGetVendorId( dwIdKind , dwId : LongWord ) : LongWord; cdecl;
function LstDevGetName( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstDevGetNameShort( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstDevGetNameShortest( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstDevGetDriverVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl;
function LstDevGetRecommendedDriverVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl;
function LstDevGetFirmwareVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl;
function LstDevGetRecommendedFirmwareVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl;
function LstDevGetCalibrationDate( dwIdKind , dwId : LongWord ) : TTpDate; cdecl;
function LstDevGetSerialNumber( dwIdKind , dwId : LongWord ) : LongWord; cdecl;
function LstDevGetIPv4Address( dwIdKind , dwId : LongWord ) : LongWord; cdecl;
function LstDevGetIPPort( dwIdKind , dwId : LongWord ) : Word; cdecl;
function LstDevHasServer( dwIdKind , dwId : LongWord ) : ByteBool; cdecl;
function LstDevGetServer( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl;
function LstDevGetTypes( dwIdKind , dwId : LongWord ) : LongWord; cdecl;
function LstDevGetContainedSerialNumbers( dwIdKind , dwId : LongWord ; pBuffer : PLongWord ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstCbDevGetProductId( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : LongWord; cdecl;
function LstCbDevGetVendorId( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : LongWord; cdecl;
function LstCbDevGetName( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstCbDevGetNameShort( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstCbDevGetNameShortest( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function LstCbDevGetDriverVersion( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpVersion; cdecl;
function LstCbDevGetFirmwareVersion( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpVersion; cdecl;
function LstCbDevGetCalibrationDate( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpDate; cdecl;
function LstCbScpGetChannelCount( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : Word; cdecl;
procedure LstSetCallbackDeviceAdded( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl;
procedure LstSetCallbackDeviceRemoved( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl;
procedure LstSetCallbackDeviceCanOpenChanged( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure LstSetEventDeviceAdded( fdEvent : Integer ); cdecl;
procedure LstSetEventDeviceRemoved( fdEvent : Integer ); cdecl;
procedure LstSetEventDeviceCanOpenChanged( fdEvent : Integer ); cdecl;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure LstSetEventDeviceAdded( hEvent : THandle ); cdecl;
procedure LstSetEventDeviceRemoved( hEvent : THandle ); cdecl;
procedure LstSetEventDeviceCanOpenChanged( hEvent : THandle ); cdecl;
procedure LstSetMessageDeviceAdded( hWnd : HWND ); cdecl;
procedure LstSetMessageDeviceRemoved( hWnd : HWND ); cdecl;
procedure LstSetMessageDeviceCanOpenChanged( hWnd : HWND ); cdecl;
{$endif MSWINDOWS}
function NetGetAutoDetectEnabled : ByteBool; cdecl;
function NetSetAutoDetectEnabled( bEnable : ByteBool ) : ByteBool; cdecl;
function NetSrvAdd( pURL : PAnsiChar ; dwURLLength : LongWord ; pHandle : PLibTiePieHandle ) : ByteBool; cdecl;
function NetSrvRemove( pURL : PAnsiChar ; dwURLLength : LongWord ; bForce : ByteBool ) : ByteBool; cdecl;
function NetSrvGetCount : LongWord; cdecl;
function NetSrvGetByIndex( dwIndex : LongWord ) : TLibTiePieHandle; cdecl;
function NetSrvGetByURL( pURL : PAnsiChar ; dwURLLength : LongWord ) : TLibTiePieHandle; cdecl;
procedure NetSrvSetCallbackAdded( pCallback : TTpCallbackHandle ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure NetSrvSetEventAdded( fdEvent : Integer ); cdecl;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure NetSrvSetEventAdded( hEvent : THandle ); cdecl;
procedure NetSrvSetMessageAdded( hWnd : HWND ); cdecl;
{$endif MSWINDOWS}
procedure ObjClose( hHandle : TLibTiePieHandle ); cdecl;
function ObjIsRemoved( hHandle : TLibTiePieHandle ) : ByteBool; cdecl;
function ObjGetInterfaces( hHandle : TLibTiePieHandle ) : UInt64; cdecl;
procedure ObjSetEventCallback( hHandle : TLibTiePieHandle ; pCallback : TTpCallbackEvent ; pData : Pointer ); cdecl;
function ObjGetEvent( hHandle : TLibTiePieHandle ; pEvent , pValue : PLongWord ) : ByteBool; cdecl;
{$ifdef LINUX}
procedure ObjSetEventEvent( hHandle : TLibTiePieHandle ; fdEvent : Integer ); cdecl;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure ObjSetEventEvent( hHandle : TLibTiePieHandle ; hEvent : THandle ); cdecl;
procedure ObjSetEventWindowHandle( hHandle : TLibTiePieHandle ; hWnd : HWND ); cdecl;
{$endif MSWINDOWS}
procedure DevClose( hDevice : TLibTiePieHandle ); cdecl;
function DevIsRemoved( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function DevGetDriverVersion( hDevice : TLibTiePieHandle ) : TTpVersion; cdecl;
function DevGetFirmwareVersion( hDevice : TLibTiePieHandle ) : TTpVersion; cdecl;
function DevGetCalibrationDate( hDevice : TLibTiePieHandle ) : TTpDate; cdecl;
function DevGetCalibrationToken( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevGetSerialNumber( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function DevGetIPv4Address( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function DevGetIPPort( hDevice : TLibTiePieHandle ) : Word; cdecl;
function DevGetProductId( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function DevGetVendorId( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function DevGetType( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function DevGetName( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevGetNameShort( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevGetNameShortest( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevHasBattery( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function DevGetBatteryCharge( hDevice : TLibTiePieHandle ) : ShortInt; cdecl;
function DevGetBatteryTimeToEmpty( hDevice : TLibTiePieHandle ) : LongInt; cdecl;
function DevGetBatteryTimeToFull( hDevice : TLibTiePieHandle ) : LongInt; cdecl;
function DevIsBatteryChargerConnected( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function DevIsBatteryCharging( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function DevIsBatteryBroken( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
procedure DevSetCallbackRemoved( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure DevSetEventRemoved( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure DevSetEventRemoved( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure DevSetMessageRemoved( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
{$endif MSWINDOWS}
function DevTrGetInputCount( hDevice : TLibTiePieHandle ) : Word; cdecl;
function DevTrGetInputIndexById( hDevice : TLibTiePieHandle ; dwId : LongWord ) : Word; cdecl;
function ScpTrInIsTriggered( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl;
function DevTrInGetEnabled( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl;
function DevTrInSetEnabled( hDevice : TLibTiePieHandle ; wInput : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function DevTrInGetKinds( hDevice : TLibTiePieHandle ; wInput : Word ) : UInt64; cdecl;
function ScpTrInGetKindsEx( hDevice : TLibTiePieHandle ; wInput : Word ; dwMeasureMode : LongWord ) : UInt64; cdecl;
function DevTrInGetKind( hDevice : TLibTiePieHandle ; wInput : Word ) : UInt64; cdecl;
function DevTrInSetKind( hDevice : TLibTiePieHandle ; wInput : Word ; qwKind : UInt64 ) : UInt64; cdecl;
function DevTrInIsAvailable( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl;
function ScpTrInIsAvailableEx( hDevice : TLibTiePieHandle ; wInput : Word ; dwMeasureMode : LongWord ) : ByteBool; cdecl;
function DevTrInGetId( hDevice : TLibTiePieHandle ; wInput : Word ) : LongWord; cdecl;
function DevTrInGetName( hDevice : TLibTiePieHandle ; wInput : Word ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevTrGetOutputCount( hDevice : TLibTiePieHandle ) : Word; cdecl;
function DevTrGetOutputIndexById( hDevice : TLibTiePieHandle ; dwId : LongWord ) : Word; cdecl;
function DevTrOutGetEnabled( hDevice : TLibTiePieHandle ; wOutput : Word ) : ByteBool; cdecl;
function DevTrOutSetEnabled( hDevice : TLibTiePieHandle ; wOutput : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function DevTrOutGetEvents( hDevice : TLibTiePieHandle ; wOutput : Word ) : UInt64; cdecl;
function DevTrOutGetEvent( hDevice : TLibTiePieHandle ; wOutput : Word ) : UInt64; cdecl;
function DevTrOutSetEvent( hDevice : TLibTiePieHandle ; wOutput : Word ; qwEvent : UInt64 ) : UInt64; cdecl;
function DevTrOutGetId( hDevice : TLibTiePieHandle ; wOutput : Word ) : LongWord; cdecl;
function DevTrOutGetName( hDevice : TLibTiePieHandle ; wOutput : Word ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function DevTrOutTrigger( hDevice : TLibTiePieHandle ; wOutput : Word ) : ByteBool; cdecl;
function ScpGetChannelCount( hDevice : TLibTiePieHandle ) : Word; cdecl;
function ScpChIsAvailable( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChIsAvailableEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; byResolution : Byte ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : ByteBool; cdecl;
function ScpChGetConnectorType( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChIsDifferential( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
